<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/user_head_iv"
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp"
        android:contentDescription="@string/head"
        app:srcCompat="@mipmap/head_02x" />

    <TextView
        android:id="@+id/user_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/user_head_iv"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-36dp"
        android:text="@string/user_name"
        android:textColor="#333333"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/edit_tv"
        android:layout_width="87dp"
        android:layout_height="20dp"
        android:layout_alignLeft="@id/user_head_iv"
        android:layout_marginLeft="97dp"
        android:layout_marginTop="85dp"

        android:text="@string/edit_text"
        android:textColor="#CCCCCC"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/user_num_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/user_name_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-30dp"
        android:text="@string/inke_num"
        android:textColor="#999999"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_num_tv"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/action_center_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/sixing_2x"
            android:gravity="center_horizontal"
            android:text="@string/action_center"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/shop_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/shangcheng_2x"
            android:gravity="center_horizontal"
            android:text="@string/shop"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/personal_mail_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/sixing_2x"
            android:gravity="center_horizontal"
            android:text="@string/personal_mail"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/task_center_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/renwuzhongxing_2x"
            android:gravity="center_horizontal"
            android:text="@string/task_center"
            android:textColor="#000000"
            android:textSize="12sp" />
    </LinearLayout>


</RelativeLayout>
